# newAoE

./: AboutDialog.cpp  AboutDialog.ui  AboutDialog_new.ui  ActWidget.cpp  Animal.cpp  Army.cpp  Block.cpp  Block_commented.cpp  Bloodhaver.cpp  Bloodhaver.h  Building.cpp  CMakeLists.txt  Development.cpp  Farmer.cpp  Human.cpp  Player.cpp  README.md  Resource.cpp  StaticRes.cpp  UsrAI.h  ai.cpp  ai.cpp.backup  ai.h.backup  ai_new.cpp  ai_part1.txt  main.cpp  temp_ai.txt  ui_AboutDialog.h
